# finopsaudit

./: .gitignore  README.md  pyproject.toml
src/Agent/: EntityExtractor.py  KnowledgeBase.py  LlmClient.py  Models.py  ResidueAnalyzer.py  Workflow.py  __init__.py  agentv1.py  cli.py
src/Audit/: AuditInitialiser.py  AuditPhaseOne.py  AuditPhaseTwo.py  AuditReadiness.py  ConfigLoader.py  EntityMerger.py  SuggestedEntities.py  __init__.py  cli.py
src/Audit/DefaultTenantConfig/: environments.txt  exclusions.txt  regions.txt
src/AuditDashboard/: app.py
src/AuditDashboard/pages/: 01_protect_set_analysis.py  02_corpus_health_overview.py  03_overall_fitness.py  04_entity_analysis_summary.py  05_inconsistency_deep_dive.py
src/AuditDashboard/utils/: data_loader.py
src/AuditInitialiser/: __init__.py
src/Configuration/: AgentConfig.py  AuditConfig.py  AuditDashboardConfig.py  DatabaseConfig.py  EntityMergerConfig.py  GlobalConfig.py  __init__.py
src/DataManager/: DataManager.py  __init__.py
src/Database/: __init__.py  dataAggregator.py  duckdb_manager.py
src/Database/duckdb_views/: resource_daily_aggregated_state.sql  resources_per_day.sql  resources_per_day_json.sql  view_order.json
src/EntityMerger/: EntityMerger.py  EntityNameSimilarity.py  __init__.py  cli.py
src/FileSystem/: __init__.py  base.py  local.py  registry.py
src/FocusIngestor/: __init__.py
src/FocusIngestor/FocusSpecification/: __init__.py  focus_col_spec.yaml  schema_manager.py
src/FocusIngestor/IngestionService/: __init_.py  (+1 more)
src/Utils/: __init__.py  dateparser.py  logging.py  partitionutils.py  validationutils.py
src/Writers/: __init__.py  parquet_manager.py  tag_exploder.py
tests/: test_csv_reader.py  test_date_utils.py  test_decimal_handler.py  test_local_filesystem.py  test_tag_exploder.py  test_tag_parser.py
(+4 files in other folders)
